# HTI-BRIDGE

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  QUICKSTART.md  README.md  app.js  index.html  manifest.json  pyproject.toml  requirements.txt  service-worker.js  start.sh  style.css  todo.md  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  smoke-check.yml
api/: index.js
artifacts/: demo_scorecard.json  integration.md  migration.md  scorecard.md  security.md
backend/: ai_assistant.py  email_manager.py  gmail_auth.py  server.py  vector_store.py
config/: criteria.yml
data/vendors/: copper.yml  creatio.yml  dynamics365.yml  freshsales.yml  hubspot.yml  insightly.yml  keap.yml  monday_sales_crm.yml  nutshell.yml  pipedrive.yml  sugarcrm.yml  suitecrm.yml  zendesk_sell.yml  zoho.yml
docs/: agents.md  data-sources-comprehensive.md  data-sources.md  grant-discovery-system.md  knack-integration-plan.md  memory.md  visual-design-system.md
examples/: profile_smb.yml
fixtures/: bootstrap.json
frontend/: app.js  index.html  styles.css
server/: .env.example  package-lock.json  package.json
server/data/: hti.json.bak
server/scrapers/: corporate-laptop-scraper.js  nc-southeast-laptop-scraper.js  professional-services-scraper.js
src/: ai-email-generator.js  analytics-dashboard.js  bridge-enhancements.css  gamification.js  grant-swipe.css  grant-swipe.js  lead-swipe.css  lead-swipe.js
tests/: conftest.py  test_cli.py  test_data.py  test_report.py  test_scoring.py
web/: config.js  data-loader.js  main.js
(+85 files in other folders)
