[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crm-eval"
version = "0.1.0"
description = "Toolkit to evaluate Salesforce-free CRM alternatives."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "HTI", email = "ops@hti.example" }]
keywords = ["crm", "evaluation", "scoring", "migration"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "black>=24.3",
]

[project.scripts]
crm-eval = "crm_eval.cli:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
exclude = ["venv", ".venv", "build", "dist"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
